--- a/index.html
+++ b/index.html
@@ -14,14 +14,94 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <h1 class="container__titulo">Com o Combo+, voce pode aproveitar a Alura+ e o Alura Lingua por um preco
+                unico.</h1>
+            <img src="img/Combo.png" alt="O combo+ e a juncao do alura+ e o alura lingua" class="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            <p class="container__aviso">*O preco pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+                aparelhos. Nossa selecao de cursos nao para de crescer.</p>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">
+                So o Combo+ oferece Alura+ e Alura Lingua juntos para voce ter acesso a cursos de diversas areas da
+                tecnologia e aprender ingles ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura lingua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com a pagina do curso HTML5 e CSS3 da Alura aberta"
+            class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                voce, ate mesmo sem internet.</p>
+        </div>
+    </section>
+    
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="img/tv.png" alt="icone de televisao">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="icone de computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="icone de celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="#">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Dispositivos compativeis</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Contrato de assinatura</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Politica de privacidade</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Protecao de dados no Brasil</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Anuncios personalizados</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto"> 2021 Alura, Alura+ e Alura Lingua. Todos os direitos reservados. Servico de
+            assinatura paga. Conteudo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ e um servico pago, baseado em assinatura e sujeito a termos e condicoes. O
+            servico Alura+ e comercializado por Aovs Sistemas de Informatica S.A., Rua Vergueiro, 3185 - Liberdade, Sao
+            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 
 </html>
